--- a/PersonalCard/app/src/main/res/values-night/themes.xml
+++ b/PersonalCard/app/src/main/res/values-night/themes.xml
@@ -8,9 +8,7 @@
 
         <item name="colorSecondary">@color/md_theme_dark_secondary</item>
         <item name="colorOnSecondary">@color/md_theme_dark_onSecondary</item>
-        <item name="colorSecondary
-
-Container">@color/md_theme_dark_secondaryContainer</item>
+        <item name="colorSecondaryContainer">@color/md_theme_dark_secondaryContainer</item>
         <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer</item>
 
         <item name="colorTertiary">@color/md_theme_dark_tertiary</item>
